<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">意图拦截器</string>
    <string name="decision_title">检测到外部跳转</string>
    <string name="decision_edit">编辑</string>
    <string name="decision_reject">驳回</string>
    <string name="decision_allow">通过</string>

    <string name="manage_tab_schemes">已接管 Scheme</string>
    <string name="manage_tab_rules">拦截规则</string>
    <string name="manage_add_rule">添加规则</string>
    <string name="manage_no_schemes">当前没有已接管 scheme</string>
    <string name="manage_no_rules">当前没有拦截规则</string>

    <string name="rule_dialog_title_add">添加规则</string>
    <string name="rule_dialog_title_edit">编辑规则</string>
    <string name="rule_pattern_hint">输入 URI 前缀或正则表达式</string>
    <string name="rule_enabled">启用此规则</string>
    <string name="rule_regex">正则</string>
    <string name="rule_invalid">规则不能为空</string>
    <string name="rule_saved">规则已保存</string>
    <string name="rule_deleted">规则已删除</string>

    <string name="candidate_choose">选择要跳转的应用</string>
    <string name="candidate_none">没有可转发的目标应用</string>
</resources>